--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -10,7 +10,7 @@ RUN sudo apt-get update && sudo apt-get install graphviz -y wget \
 # Install additional packages (to store cache, we do it on $NB_USER.)
 USER $NB_USER
 RUN pip install --upgrade pip setuptools wheel
-COPY flake8 /home/$NB_USER/work/.config/flake8
+COPY flake8 /home/$NB_USER/.config/flake8
 COPY requirements.txt /tmp/requirements.txt
 RUN pip install --requirement /tmp/requirements.txt \
     && fix-permissions $CONDA_DIR \
