--- a/dockerfiles/tests/Dockerfile
+++ b/dockerfiles/tests/Dockerfile
@@ -10,11 +10,15 @@ RUN sudo apt-get update && sudo apt-get install graphviz -y wget \
 # Install additional packages (to store cache, we do it on $NB_USER.)
 USER $NB_USER
 RUN pip install --upgrade pip setuptools wheel
-COPY ./dockerfiles/flake8 /home/$NB_USER/.config/flake8
-COPY ./dockerfiles/requirements.txt /tmp/requirements.txt
+COPY flake8 /home/$NB_USER/.config/flake8
+COPY requirements.txt /tmp/requirements.txt
 RUN pip install --requirement /tmp/requirements.txt \
     && fix-permissions $CONDA_DIR \
     && fix-permissions /home/$NB_USER
 
 # Initialization of prefect. Unless chown, permission error arises in Prefecct.
-COPY --chown=$NB_USER:users ./dockerfiles/config.toml $HOME/.prefect/
+COPY --chown=$NB_USER:users config.toml $HOME/.prefect/
+
+## JupyterLab
+#RUN jupyter labextension install jupyterlab-flake8
+RUN jupyter labextension install @jupyterlab/toc
