--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,11 +23,14 @@ jobs:
       - name: Build docker image
         env:
           DOCKER_BUILDKIT: 1
-        run: docker build . --file ./dockerfiles/tests/Dockerfile --cache-from=$IMAGE_ID:latest
+        run: |
+          cp ./dockerfiles/.env ./dockerfiles/tests/
+          echo $IMAGE_ID >> ./dockerfiles/tests/.env
+          cd ./dockerfiles/tests
+          docker-compose up -d
       - name: Test with pytest
         run: |
-          docker exec -i -t ml_bots_base bash
-          pytest ./work/src/tests
+          docker-compose exec -T python pytest
   # PUSH IMAGE
   push:
     # Trigger when unit tests are completed.
