--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
           docker-compose --file ./dockerfiles/docker-compose.test.yml up -d
       - name: Test with pytest
         run: |
-          docker-compose exec -T python pytest
+          docker-compose exec -T $IMAGE_NAME pytest
   # PUSH IMAGE
   push:
     # Trigger when unit tests are completed.
