--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
           DOCKER_BUILDKIT: 1
           COMPOSE_DOCKER_CLI_BUILD: 1
         run: |
-          echo $IMAGE_ID >> ./dockerfiles/tests/.env
+          echo $IMAGE_ID >> ./dockerfiles/.env
           docker-compose --file ./dockerfiles/docker-compose.test.yml up -d
       - name: Test with pytest
         run: |
