--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,9 +29,7 @@ jobs:
           docker-compose --file ./dockerfiles/docker-compose.test.yml up -d
       - name: Test with pytest
         run: |
-          docker images
-          docker-compose exec $IMAGE_NAME bash
-          pytest ./work/src/tests
+          docker exec $IMAGE_NAME pytest ./work/src/tests
   # PUSH IMAGE
   push:
     # Trigger when unit tests are completed.
