--- a/dockerfiles/docker-compose.yml
+++ b/dockerfiles/docker-compose.yml
@@ -6,11 +6,11 @@ services:
     container_name: ml_bots_base
     env_file:
       - .env
-    environment:
-      JUPYTER_ENABLE_LAB: "yes"
-      GRANT_SUDO: "yes"
-      CHOWN_HOME: "yes"
-      CHOWN_EXTRA_OPTS: -R
+    #environment:
+    #  JUPYTER_ENABLE_LAB: "yes"
+    #  GRANT_SUDO: "yes"
+    #  CHOWN_HOME: "yes"
+    #  CHOWN_EXTRA_OPTS: -R
     ports:
       - "8888:8888" # Port for jupyterlab.
       - "8501:8501" # Port for streamlit.
