--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
         run: |
           echo $IMAGE_ID >> ./dockerfiles/.env
           docker-compose --file ./dockerfiles/docker-compose.test.yml up -d
+      - uses: actions/checkout@v2
       - name: Test with pytest
         run: |
           docker exec $IMAGE_NAME ls
