--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - name: Log into GitHub Container Registry
         run: echo "${{ secrets.CR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
       - name: Build docker image
         env:
           DOCKER_BUILDKIT: 1
@@ -27,6 +29,7 @@ jobs:
         run: |
           echo $IMAGE_ID >> ./dockerfiles/.env
           docker-compose --file ./dockerfiles/docker-compose.test.yml up -d
+
       - name: Test with pytest
         run: |
           docker exec $IMAGE_NAME ls
@@ -38,12 +41,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.CR_PAT }}
+
       - name: Build container image for master branch.
         uses: docker/build-push-action@v2
         if: "contains( github.ref , 'master')"
@@ -52,6 +60,7 @@ jobs:
           push: true
           tags: |
             ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
+
       - name: Build container image for feature branch.
         uses: docker/build-push-action@v2
         if: "!contains( github.ref , 'master')"
