--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,6 @@ on:
 env:
   # image name
   IMAGE_NAME: ml_bots_base
-  IMAGE_ID: ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
 jobs:
   # RUN UNIT TESTS
   unittest:
@@ -26,6 +25,7 @@ jobs:
         env:
           DOCKER_BUILDKIT: 1
           COMPOSE_DOCKER_CLI_BUILD: 1
+          IMAGE_ID: ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
         run: |
           echo $IMAGE_ID >> ./dockerfiles/.env
           docker-compose --file ./dockerfiles/docker-compose.test.yml up -d
@@ -53,12 +53,16 @@ jobs:
           password: ${{ secrets.CR_PAT }}
 
       - name: Build container image for master branch.
+        env:
+          IMAGE_ID: ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
         if: "contains( github.ref , 'master')"
         run: |
           docker tag $IMAGE_NAME $IMAGE_ID:latest
           docker push $IMAGE_ID:latest
 
       - name: Build container image for feature branch.
+        env:
+          IMAGE_ID: ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
         if: "!contains( github.ref , 'master')"
         run: |
           docker tag $IMAGE_NAME $IMAGE_ID:${{ github.sha }}
