change image and contrainer name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ on:
       - v*
 env:
   # Image name
+  CONTAINER_NAME: ml_bots
   IMAGE_NAME: ml_bots_base
   IMAGE_ID: ghcr.io/${{ github.repository_owner }}/ml_bots_base
 jobs:
@@ -32,8 +33,8 @@ jobs:
 
       - name: Test with pytest
         run: |
-          docker exec $IMAGE_NAME ls
-          docker exec $IMAGE_NAME pytest ./src/tests
+          docker exec $CONTAINER_NAME ls
+          docker exec $CONTAINER_NAME pytest ./src/tests
   # PUSH IMAGE
   push:
     # Trigger when unit tests are completed.
@@ -56,17 +57,12 @@ jobs:
         if: "contains( github.ref , 'master')"
         # Store the container ID with ``(back quart).
         run: |
-          CURIMAGE_ID=`docker ps -aqf "name=$IMAGE_NAME"`
-          echo $CURIMAGE_ID
-          docker images
-          docker tag $CURIMAGE_ID $IMAGE_ID:latest
-          docker images
+          docker tag $IMAGE_NAME $IMAGE_ID:latest
           docker push $IMAGE_ID:latest
 
       - name: Push image of develop or feature branch to GitHub Container Registry
         if: "!contains( github.ref , 'master')"
         run: |
-          CURIMAGE_ID=`docker ps -aqf "name=$IMAGE_NAME"`
-          docker tag $CURIMAGE_ID $IMAGE_ID:${{ github.sha }}
+          docker tag $IMAGE_NAME $IMAGE_ID:${{ github.sha }}
           docker push $IMAGE_ID:${{ github.sha }}
 
