--- a/dockerfiles/docker-compose.yml
+++ b/dockerfiles/docker-compose.yml
@@ -9,16 +9,18 @@ services:
     container_name: ml_bots
     env_file:
       - .env
-    #environment:
-    #  JUPYTER_ENABLE_LAB: "yes"
-    #  GRANT_SUDO: "yes"
-    #  CHOWN_HOME: "yes"
-    #  CHOWN_EXTRA_OPTS: -R
     ports:
       - "8888:8888" # Port for jupyterlab.
       - "8501:8501" # Port for streamlit.
       - "5000:5000" # Port for mlflow.
     volumes:
       - ~/ml_bots:/home/$NB_USER/work
-    working_dir: /home/$NB_USER
+    working_dir: /home/$NB_USER/work
+    networks:
+      - local_network
     command: start.sh jupyter lab --NotebookApp.token=''
+
+
+networks:
+  local_network:
+    external: true
